# Test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SKILL.md  adapters.py  common.py  connection.py  debug_menu_structure.py  heartbeat.py  main.py  manual_mode_switch.py  manual_mode_switch_debug.py  manual_mode_switch_robust.py  orchestrator.py  pyproject.toml  requirements.txt  test_chrome_stable.py  test_gemini_mode_fix.py  test_multiagent_gemini_extended.py  verify_config.py  verify_mode_switch.py
.github/workflows/: ci.yml
adapters/: _deprecated.py  base.py  chatgpt.py  claude.py  deepseek.py  gemini.py  kimi.py  qianwen.py
adapters/components/: __init__.py  gemini_completion.py  gemini_extraction.py  gemini_mode.py  protocols.py
loop_results/: SUMMARY.md  r10_p2.json  r11_p2.json  r12_p2.json  r13_p2.json  r14_p2.json  r15_p2.json  r16_p2.json  r17_p2.json  r18_p2.json  r19_p2.json  r1_p2.json  r20_p2.json  r21_p2.json  r22_p2.json  r23_p2.json  r24_p2.json  r25_p2.json  r26_p2.json  r27_p2.json  r28_p2.json  r29_p2.json  r2_p2.json  r30_p2.json  r3_p2.json  r4_p2.json  r5_p2.json  r6_p2.json  r7_p2.json  r8_p2.json  r9_p2.json
reference/: platform-maturity.md
scripts/: connect-gemini.sh  start-chrome-debug.py  start-chrome-debug.sh
skills/multiagent/: SKILL.md  common.py  debug_multiagent.py  main.py  orchestrator.py  requirements.txt  router.py  test_deepseek.py  test_deepseek_v4_pro.py  test_orchestrator_payload.py
skills/multiagent/adapters/: __init__.py  doubao.py  gemini.py  kimi.py  minimax.py
skills/multiagent/adapters/components/: gemini_completion.py  gemini_editor.py  gemini_extraction.py  gemini_mode.py
skills/multiagent/tests/contracts/: test_adapter_contract.py
skills/multiagent/tests/unit/: test_phase2_logic.py  test_platform_id.py
tests/unit/: test_circuit_breaker.py
